<resources>
    <string name="app_name">Tororobot</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_main">Inicio</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password_old">Olvidó su contraseña?</string>
    <string name="bad_credential">Verifique el email o contraseña</string>
    <string name="title_activity_log_in">Iniciar Sesión en Tororobot</string>
    <string name="title_activity_log_in2">Iniciar Sesión</string>
    <string name="old_password">Olvidó su contraseña?</string>
    <string name="loading">Cargando&#8230;</string>
    <string name="title_loading">Verificando datos&#8230;</string>
    <string name="forgot_password">Olvido su contraseña?</string>
    <string name="no_content">No se pudo cargar el contenido</string>
    <string name="retry">Reintentar</string>
    <string name="no_connection">No tiene conexión a internet</string>
    <string name="try_again">Volver a intentarlo</string>
    <string name="error_occurred2">Ocurrió un error inesperado, intente de nuevo</string>
    <string name="not_empty">El campo no puede ir vació</string>
    <string name="validation_email">Introduzca una dirección de correo valida</string>
    <string name="min_length_password">Mínimo 4 caracteres</string>
    <string name="not_empty_user">El email no puede ir vació</string>
    <string name="error_email">Introduzca un correo valido</string>
    <string name="not_empty_email">El correo no puede ir vació</string>
    <string name="not_empty_password">La contraseña no puede ir vació</string>
    <string name="error_email_password">Correo o contraseña invalida</string>
    <string name="not_empty_password2">Confirmar contraseña no puede ir vació</string>
    <string name="error_profile">Error al cargar el perfil se usuario, vuelva a intentarlo</string>
    <string name="error_many">Ocurrió un error que usted no puede controlar. Comuníquese con Tororobot.com</string>
    <string name="content_update">Contenido actualizado</string>
    <string name="not_empty_token">Token de autenticación vacío, si el problemas persiste comuníquese con el Soporte de ClowdWork</string>
    <string name="not_empty_profile">Perfil vacío, si el problemas persiste comuníquese con el Soporte de ClowdWork</string>
    <string name="main">Inicio</string>
    <string name="establish">Establecer</string>
    <string name="call">Llamar</string>
    <string name="me">Perfil</string>
    <string name="settings_name" translatable="false">Configuración</string>
    <string name="disconnect_call">Llamada desconectada</string>
    <string name="room_description">
       Introduzca un nombre de sala. Número de salones se comparten con todo el mundo, por lo que pensar
         de algo único y enviarlo a un amigo.
    </string>
    <string name="favorites">Favoritos</string>
    <string name="no_favorites">No favoritos</string>
    <string name="invalid_url_title">URL invalida</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Error de conexión</string>
    <string name="connecting_to">Conectando a: %1$s</string>
    <string name="missing_url">Error: Falta el URL para conectarse.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">Configuración de Video.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Only supported on Android Lollipop and forward.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Resolución de vídeo.</string>
    <string name="pref_resolution_default">Defecto</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">FPS Camara.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startvideobitratevalue_dlg">Enter video encoder start bitrate in kbps.</string>
    <string name="pref_startvideobitratevalue_default">1000</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Códec de vídeo predeterminado.</string>
    <string name="pref_videocodec_dlg">Códec de vídeo de selección por defecto.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
    <string name="pref_disable_built_in_agc_key">disable_built_in_agc_preference</string>
    <string name="pref_disable_built_in_agc_title">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_dlg">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_default">false</string>
    <string name="pref_built_in_agc_not_available">Hardware AGC is not available</string>
    <string name="pref_disable_built_in_ns_key">disable_built_in_ns_preference</string>
    <string name="pref_disable_built_in_ns_title">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_dlg">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_default">false</string>
    <string name="pref_built_in_ns_not_available">Hardware NS is not available</string>
    <string name="pref_enable_level_control_key">enable_level_control_preference</string>
    <string name="pref_enable_level_control_title">Enable level control.</string>
    <string name="pref_enable_level_control_default">false</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://appr.tc</string>
    <string name="disconnect">Disconnect</string>
    <string name="send">Send</string>
    <string name="command">Command</string>
    <string name="left">Left</string>
    <string name="rigth">Right</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
</resources>