<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bluetooth.bluetooh2.Bluetooh2Activity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="">

        <ListView
            android:id="@+id/pairedlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/inputpane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/command"
                    android:ems="10"
                    android:id="@+id/inputCommand" />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left"/>

                    <Button
                        android:id="@+id/btnForward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forward"/>

                    <Button
                        android:id="@+id/btnBackward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/backward"/>

                    <Button
                        android:id="@+id/btnRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rigth"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher"
                        android:id="@+id/imageView2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnDisconnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disconnect"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
